--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -8,16 +8,19 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/dash/operarios']" routerLinkActive="active">Operarios</a>
-            </li>        
-            <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/dash/asistencia/entrada']" routerLinkActive="active">Asistencia E</a>
-            </li>
-            <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/dash/asistencia/seguimiento']" routerLinkActive="active">Asistencia S</a>
-            </li>                                     
+            </li>                                            
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/dash/incidencias']" routerLinkActive="active">Incidencias</a>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Asistencia
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/entrada']">Entradas</a>
+                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/seguimiento]">Seguimiento</a>
+                </div>
+            </li>            
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/dash/limpieza']" routerLinkActive="active">Partes</a>
             </li>
