--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -18,7 +18,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" [routerLink]="['/dash/asistencia/entrada']">Entradas</a>
-                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/seguimiento]">Seguimiento</a>
+                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/seguimiento']">Seguimiento</a>
                 </div>
             </li>            
             <li class="nav-item">
