--- a/src/app/asistencia/seguimiento-as/seguimiento-as.component.html
+++ b/src/app/asistencia/seguimiento-as/seguimiento-as.component.html
@@ -25,7 +25,7 @@
   </div>   
 </div>  
 <div class="row">
-  <div class="col-md-8" *ngIf="visible">
+  <div class="col" *ngIf="visible">
     <app-detalle-seg [idop]="idop" [fechai]="fechai" [fechaf]="fechaf"></app-detalle-seg>    
   </div>
   <div class="col-md-3">
