--- a/src/app/asistencia/entrada-as/entrada-as.component.html
+++ b/src/app/asistencia/entrada-as/entrada-as.component.html
@@ -51,7 +51,7 @@
               <div *ngIf="item.disfrutadas > 0">Dias vacaciones disfrutadas: {{ item.disfrutadas }}</div>
               <div *ngIf="item.justificado > 0">Dia justificado: {{ item.justificado }}</div>                                                                      
               <div *ngIf="item.injustificado > 0">Dia no justificado: {{ item.injustificado }}</div>      
-              <div *ngIf="item.fecha_inico != ''">Desde {{ item.fecha_inicio}}<br>Hasta {{ item.fecha_fin }}</div>                              
+              <div *ngIf="(item.fecha_inicio != '') && (item.fecha_inicio != null)">Desde {{ item.fecha_inicio | date:'dd/MM/yyyy' }}<br>Hasta {{ item.fecha_fin | date:'dd/MM/yyyy' }}</div>                              
             </td>
             <td> <a [routerLink]="['/dash/asistencia/entrada', fecha, item.id_op]">Editar</a></td>        
           </tr>
