--- a/src/app/asistencia/entrada-as/entrada-as.component.html
+++ b/src/app/asistencia/entrada-as/entrada-as.component.html
@@ -30,14 +30,14 @@
             <td>
               <div *ngIf="elUltimo(item._id)" class="alert alert-warning" role="alert">
                 <div>Fecha: {{ asUltimo?.lastFecha | date: 'dd/MM/yyyy' }}</div>
-                <div *ngIf="asUltimo?.lastTrabajado > 0">Trabajado: {{ asUltimo?.lastTrabajado }}</div>
-                <div *ngIf="asUltimo?.lastDescanso > 0">Descanso: {{ asUltimo?.lastDescanso }}</div>
-                <div *ngIf="asUltimo?.lastFestivo > 0">Festivo: {{ asUltimo?.lastFestivo }}</div>
-                <div *ngIf="asUltimo?.lastVacaciones > 0">Vacaciones pend.: {{ asUltimo?.lastVacaciones }}</div>
-                <div *ngIf="asUltimo?.lastDisfrutadas > 0">Vacaciones disf.: {{ asUltimo?.lastDisfrutadas }}</div>
-                <div *ngIf="asUltimo?.lastBaja > 0">Baja: {{ asUltimo?.lastBaja }}</div>
+                <div *ngIf="asUltimo?.lastTrabajado > 0" style="background-color: #24e9f7;">Trabajado: {{ asUltimo?.lastTrabajado }}</div>
+                <div *ngIf="asUltimo?.lastDescanso > 0" style="background-color: #21f77a;">Descanso: {{ asUltimo?.lastDescanso }}</div>
+                <div *ngIf="asUltimo?.lastFestivo > 0" style="background-color: #f860f8; color: white;">Festivo: {{ asUltimo?.lastFestivo }}</div>
+                <div *ngIf="asUltimo?.lastVacaciones > 0" style="background-color: #f7eb44;">Vacaciones pend.: {{ asUltimo?.lastVacaciones }}</div>
+                <div *ngIf="asUltimo?.lastDisfrutadas > 0" style="background-color: #f7bc3c;">Vacaciones disf.: {{ asUltimo?.lastDisfrutadas }}</div>
+                <div *ngIf="asUltimo?.lastBaja > 0" style="background-color: #f73c3c; color: white;">Baja: {{ asUltimo?.lastBaja }}</div>
                 <div *ngIf="asUltimo?.lastJustificado > 0">Justificado: {{ asUltimo?.lastJustificado }}</div>
-                <div *ngIf="asUltimo?.lastInjustificado > 0">No justificado: {{ asUltimo?.lastInjustificado }}</div>
+                <div *ngIf="asUltimo?.lastInjustificado > 0" style="background-color: #7c7c7c; color: white;">No justificado: {{ asUltimo?.lastInjustificado }}</div>
                 <div *ngIf="(asUltimo?.lastFecha_inicio != '') && (asUltimo?.lastFecha_inicio != null)">Desde {{ asUltimo?.lastFecha_inicio | date:'dd/MM/yyyy' }}
                   <br>Hasta {{ asUltimo?.lastFecha_fin | date:'dd/MM/yyyy' }}
                 </div>
@@ -52,14 +52,14 @@
               <button type="button" class="btn btn-warning btn-sm" (click)="insertaRapido(item._id, item.nombre, 3)">FES</button>
               <button type="button" class="btn btn-secondary btn-sm" (click)="ventanaClick(i, 'n')">Otro</button>
               <div *ngIf="yaExiste(item._id)" class="alert alert-primary" role="alert">
-                <div *ngIf="asDeldia?.trabajado > 0">Trabajado: {{ asDeldia?.trabajado }}</div>
-                <div *ngIf="asDeldia?.descanso > 0">Descanso: {{ asDeldia?.descanso }}</div>
-                <div *ngIf="asDeldia?.festivo > 0">Festivo: {{ asDeldia?.festivo }}</div>
-                <div *ngIf="asDeldia?.vacaciones > 0">Vacaciones pend.: {{ asDeldia?.vacaciones }}</div>
-                <div *ngIf="asDeldia?.disfrutadas > 0">Vacaciones disf.: {{ asDeldia?.disfrutadas }}</div>
-                <div *ngIf="asDeldia?.baja > 0">Baja: {{ asDeldia?.baja }}</div>
+                <div *ngIf="asDeldia?.trabajado > 0" style="background-color: #24e9f7;">Trabajado: {{ asDeldia?.trabajado }}</div>
+                <div *ngIf="asDeldia?.descanso > 0" style="background-color: #21f77a;">Descanso: {{ asDeldia?.descanso }}</div>
+                <div *ngIf="asDeldia?.festivo > 0" style="background-color: #f860f8; color: white;">Festivo: {{ asDeldia?.festivo }}</div>
+                <div *ngIf="asDeldia?.vacaciones > 0" style="background-color: #f7ee70;">Vacaciones pend.: {{ asDeldia?.vacaciones }}</div>
+                <div *ngIf="asDeldia?.disfrutadas > 0" style="background-color: #f7bc3c;">Vacaciones disf.: {{ asDeldia?.disfrutadas }}</div>
+                <div *ngIf="asDeldia?.baja > 0" style="background-color: #f73c3c; color: white;">Baja: {{ asDeldia?.baja }}</div>
                 <div *ngIf="asDeldia?.justificado > 0">Justificado: {{ asDeldia?.justificado }}</div>
-                <div *ngIf="asDeldia?.injustificado > 0">No justificado: {{ asDeldia?.injustificado }}</div>
+                <div *ngIf="asDeldia?.injustificado > 0" style="background-color: #7c7c7c; color: white;">No justificado: {{ asDeldia?.injustificado }}</div>
                 <div *ngIf="(asDeldia?.fecha_inicio != '') && (asDeldia?.fecha_inicio != null)">Desde {{ asDeldia?.fecha_inicio | date:'dd/MM/yyyy' }}
                   <br>Hasta {{ asDeldia?.fecha_fin | date:'dd/MM/yyyy' }}
                 </div>
@@ -98,13 +98,14 @@
                 <th scope="row">{{ i + 1 }}</th>
                 <td>{{ item.nombre }}</td>
                 <td>
-                  <div *ngIf="item.trabajado > 0">Dia trabajado: {{ item.trabajado }}</div>
-                  <div *ngIf="item.descanso > 0">Dia descanso: {{ item.descanso }}</div>
-                  <div *ngIf="item.festivo > 0">Dia festivo: {{ item.festivo }}</div>
-                  <div *ngIf="item.vacaciones > 0">Dias vacaciones pendientes: {{ item.vacaciones }}</div>
-                  <div *ngIf="item.disfrutadas > 0">Dias vacaciones disfrutadas: {{ item.disfrutadas }}</div>
-                  <div *ngIf="item.justificado > 0">Dia justificado: {{ item.justificado }}</div>
-                  <div *ngIf="item.injustificado > 0">Dia no justificado: {{ item.injustificado }}</div>
+                  <div *ngIf="item.trabajado > 0" style="background-color: #24e9f7;">Dia trabajado: {{ item.trabajado }}</div>
+                  <div *ngIf="item.descanso > 0" style="background-color: #21f77a;">Dia descanso: {{ item.descanso }}</div>
+                  <div *ngIf="item.festivo > 0" style="background-color: #f860f8; color: white;">Dia festivo: {{ item.festivo }}</div>
+                  <div *ngIf="item.vacaciones > 0" style="background-color: #f7ee70;">Dias vacaciones pendientes: {{ item.vacaciones }}</div>
+                  <div *ngIf="item.disfrutadas > 0" style="background-color: #f7bc3c;">Dias vacaciones disfrutadas: {{ item.disfrutadas }}</div>
+                  <div *ngIf="item.baja > 0" style="background-color: #f73c3c; color: white;">Baja: {{ item.baja }}</div>
+                  <div *ngIf="item.justificado > 0">Dia justificado: {{ item.justificado }}</div>                                                                      
+                  <div *ngIf="item.injustificado > 0" style="background-color: #7c7c7c; color: white;">Dia no justificado: {{ item.injustificado }}</div> 
                   <div *ngIf="(item.fecha_inicio != '') && (item.fecha_inicio != null)">Desde {{ item.fecha_inicio | date:'dd/MM/yyyy' }}
                     <br>Hasta {{ item.fecha_fin | date:'dd/MM/yyyy' }}
                   </div>
