--- a/src/app/asistencia/seguimiento-as/detalle-seg.component.html
+++ b/src/app/asistencia/seguimiento-as/detalle-seg.component.html
@@ -13,13 +13,14 @@
         <th scope="row">{{ i + 1 }}</th>
         <td>{{ item.fecha }}</td>        
         <td>
-          <div *ngIf="item.trabajado > 0">Dia trabajado: {{ item.trabajado }}</div>
-          <div *ngIf="item.descanso > 0">Dia descanso: {{ item.descanso }}</div>
-          <div *ngIf="item.festivo > 0">Dia festivo: {{ item.festivo }}</div>
-          <div *ngIf="item.vacaciones > 0">Dias vacaciones pendientes: {{ item.vacaciones }}</div>
-          <div *ngIf="item.disfrutadas > 0">Dias vacaciones disfrutadas: {{ item.disfrutadas }}</div>
+          <div *ngIf="item.trabajado > 0" style="background-color: #24e9f7;">Dia trabajado: {{ item.trabajado }}</div>
+          <div *ngIf="item.descanso > 0" style="background-color: #21f77a;">Dia descanso: {{ item.descanso }}</div>
+          <div *ngIf="item.festivo > 0" style="background-color: #f860f8; color: white;">Dia festivo: {{ item.festivo }}</div>
+          <div *ngIf="item.vacaciones > 0" style="background-color: #f7ee70;">Dias vacaciones pendientes: {{ item.vacaciones }}</div>
+          <div *ngIf="item.disfrutadas > 0" style="background-color: #f7bc3c;">Dias vacaciones disfrutadas: {{ item.disfrutadas }}</div>
+          <div *ngIf="item.baja > 0" style="background-color: #f73c3c; color: white;">Baja: {{ item.baja }}</div>
           <div *ngIf="item.justificado > 0">Dia justificado: {{ item.justificado }}</div>                                                                      
-          <div *ngIf="item.injustificado > 0">Dia no justificado: {{ item.injustificado }}</div> 
+          <div *ngIf="item.injustificado > 0" style="background-color: #7c7c7c; color: white;">Dia no justificado: {{ item.injustificado }}</div> 
           <div *ngIf="(item.fecha_inicio != '') && (item.fecha_inicio != null)">Desde {{ item.fecha_inicio | date:'dd/MM/yyyy' }}<br>Hasta {{ item.fecha_fin | date:'dd/MM/yyyy' }}</div>
         </td>  
         <td><pre>{{ item.observacion }}</pre></td>                 
