--- a/src/app/hamacas/hamacas-historico/hamacas-historico.component.html
+++ b/src/app/hamacas/hamacas-historico/hamacas-historico.component.html
@@ -56,10 +56,53 @@
       <tr *ngFor="let item of listaHamacas; let i = index">
         <th scope="row">{{ item.sector }}</th>
         <td>{{ item.fecha | date: 'dd/MM/yyyy' }}</td> 
-        <td>{{ item.hamacas }}</td>               
-        <td>{{ item.sombrillas }}</td>        
+        <td>
+          <div>
+           Hamacas: {{ item.hamacas }} 
+          </div>
+          <div>
+            Rotas: {{ item.h_rotas }} 
+          </div>
+        </td>               
+        <td>
+          <div>
+            Sombrillas: {{ item.sombrillas }} 
+          </div>
+          <div>
+            Rotas: {{ item.s_rotas }} 
+          </div>
+        </td>      
         <td> <a [routerLink]="['/dash/hamacas/detalle', item._id]">Editar</a></td>        
       </tr>
     </tbody>
   </table>
 </div>
+<div>
+  <h4>Hamacas y sombrillas rotas</h4>
+</div>
+<div>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Sector</th>
+          <th scope="col">Hamacas</th>  
+          <th scope="col">Sombrillas</th>                           
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">{{ acumuladoHamacas?._id }}</th>
+          <td>
+            <div>
+              Hamacas: {{ acumuladoHamacas?.total_h_rotas }} 
+            </div>
+            </td>
+            <td>
+            <div>
+              Sombrillas: {{ acumuladoHamacas?.total_s_rotas }} 
+            </div>
+          </td>                  
+        </tr>
+      </tbody>
+    </table>
+  </div>
