--- a/src/app/asistencia/seguimiento-as/detalle-seg.component.html
+++ b/src/app/asistencia/seguimiento-as/detalle-seg.component.html
@@ -11,7 +11,10 @@
     <tbody>
       <tr *ngFor="let item of asistencia; let i = index">
         <th scope="row">{{ i + 1 }}</th>
-        <td>{{ item.fecha }}</td>        
+        <td>
+          {{ item.fecha }}
+          <button type="button" class="btn btn-primary btn-sm" (click)="ventanaClick(i, 'e')">Editar</button>
+        </td>        
         <td>
           <div *ngIf="item.trabajado > 0" style="background-color: #24e9f7;">Dia trabajado: {{ item.trabajado }}</div>
           <div *ngIf="item.descanso > 0" style="background-color: #21f77a;">Dia descanso: {{ item.descanso }}</div>
@@ -22,6 +25,7 @@
           <div *ngIf="item.justificado > 0">Dia justificado: {{ item.justificado }}</div>                                                                      
           <div *ngIf="item.injustificado > 0" style="background-color: #7c7c7c; color: white;">Dia no justificado: {{ item.injustificado }}</div> 
           <div *ngIf="(item.fecha_inicio != '') && (item.fecha_inicio != null)">Desde {{ item.fecha_inicio | date:'dd/MM/yyyy' }}<br>Hasta {{ item.fecha_fin | date:'dd/MM/yyyy' }}</div>
+          <app-in-detalle-as [ffecha]="item.fecha" [idd]="item.id_op" (upventana)="ventanaClick($event, 'e')" *ngIf="ventana == i && tipoVentana === 'e'"></app-in-detalle-as>
         </td>  
         <td><pre>{{ item.observacion }}</pre></td>                 
       </tr>
