--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -1,5 +1,5 @@
 <p>
-  DETALLE DEL PARTE HOY
+  DETALLE DEL PARTE HOY DE LIMPIEZA
 </p>
 
 <form novalidate [formGroup]="parteForm" (ngSubmit)="onSubmit(parteForm)">
