--- a/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
+++ b/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
@@ -1,5 +1,5 @@
 <p>
-  Selecciona fecha para ver los partes
+  Selecciona fecha para ver los partes de limpieza
 </p>
 <a [routerLink]="['detalle']">Nuevo parte</a> 
 <div class="form-group col-md-3">
