--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -5,13 +5,13 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav">                                                  
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dash/operarios']" routerLinkActive="active">Operarios</a>
-            </li>                                            
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dash/incidencias']" routerLinkActive="active">Incidencias</a>
+                <a class="nav-link" [routerLink]="['/dash/limpieza']" routerLinkActive="active">Limpieza</a>
             </li>
+            <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/dash/mantenimiento']" routerLinkActive="active">Mantenimiento</a>
+                </li>               
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Asistencia
@@ -20,16 +20,7 @@
                     <a class="dropdown-item" [routerLink]="['/dash/asistencia/entrada']">Entradas</a>
                     <a class="dropdown-item" [routerLink]="['/dash/asistencia/seguimiento']">Seguimiento</a>
                 </div>
-            </li>            
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dash/limpieza']" routerLinkActive="active">Partes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dash/informeslimpieza']" routerLinkActive="active">Informes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dash/analisis']" routerLinkActive="active">Analisis</a>
-            </li>
+            </li>             
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Hamacas
@@ -38,13 +29,23 @@
                     <a class="dropdown-item" [routerLink]="['/dash/hamacas']">Hamacas</a>
                     <a class="dropdown-item" [routerLink]="['/dash/hamacas/historico']">Historico</a>                    
                 </div>
-            </li>            
+            </li>    
+            <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Estadisticas
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" [routerLink]="['/dash/informeslimpieza']" routerLinkActive="active">Informes</a>
+                        <a class="dropdown-item" [routerLink]="['/dash/analisis']" routerLinkActive="active">Analisis</a>                                     
+                    </div>
+                </li>                    
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Otros
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" [routerLink]="['/dash/mantenimiento']">Mantenimiento</a>
+                    <a class="dropdown-item" [routerLink]="['/dash/operarios']" routerLinkActive="active">Operarios</a> 
+                    <a class="dropdown-item" [routerLink]="['/dash/incidencias']" routerLinkActive="active">Incidencias</a>                                       
                     <a class="dropdown-item" [routerLink]="['/dash/taller']">Taller</a>
                 </div>
             </li>
