--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -1,7 +1,4 @@
-<div>
-  <a href="" (click)="oculta($event)">{{ textoOculta }}</a>
-</div>  
-<div *ngIf="visible">
+<div class="noprint">
     <br>
     <div>
       <div>
