--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark noprint">
     <a class="navbar-brand" [routerLink]="['/']">EPLAYAS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -49,9 +49,9 @@
                     <a class="dropdown-item" [routerLink]="['/dash/taller']">Taller</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <button class="btn btn-danger" (click)="logOut()">Salir</button>
-            </li>
         </ul>
+        <form class="form-inline ml-auto">
+            <button class="btn btn-danger" (click)="logOut()">Salir</button>
+        </form>           
     </div>
 </nav>
