--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -19,6 +19,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" [routerLink]="['/dash/asistencia/entrada']">Entradas</a>
                     <a class="dropdown-item" [routerLink]="['/dash/asistencia/seguimiento']">Seguimiento</a>
+                    <a class="dropdown-item" [routerLink]="['/dash/asistencia/acumulado']">Acumulado</a>
                 </div>
             </li>             
             <li class="nav-item dropdown">
