--- a/src/app/informes-lim/resumen-dia/resumen-dia.component.html
+++ b/src/app/informes-lim/resumen-dia/resumen-dia.component.html
@@ -21,9 +21,9 @@
             </div>
             <div *ngFor="let detalle of turno.observacion; let i=index">
               <div *ngIf="detalle.observacion_ayto.length > 0">
-                <pre>
+                <span class="like-pre">
                   {{ detalle.observacion_ayto | uppercase}}
-                </pre>
+                </span>
               </div>
             </div>
             <br>
