--- a/src/app/informes-lim/resumen-dia/resumen-dia.component.html
+++ b/src/app/informes-lim/resumen-dia/resumen-dia.component.html
@@ -83,7 +83,29 @@
   </div>
   <br>
 </div>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text">
+            LIMPIEZA, MANTENIMIENTO Y DESINFECCIÓN DE MURETES.
+        </p>         
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text">
+            MANTENIMIENTO DE: LAVAPIÉS, PASARELAS, JUEGOS INFANTILES, INSTALACIONES DEPORTIVAS
+        </p>         
+      </div>
+    </div>
+  </div>
+</div>
 <br>
+
 <div class="row">
   <div class="col-md">
     <div class="card">
