--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -133,6 +133,8 @@
       <label>Acceso rápido</label>
       <button type="button" (click)="setAccesoRapido(11)" class="btn btn-primary">CP</button>
       <button type="button" (click)="setAccesoRapido(12)" class="btn btn-primary">CO</button>
+      <button type="button" (click)="setAccesoRapido(13)" class="btn btn-primary">MANT</button> 
+      <button type="button" (click)="setAccesoRapido(14)" class="btn btn-primary">DESS</button>            
     </div>    
   <div class="form-group">
     <div>
