--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -120,7 +120,7 @@
       type="number"
       placeholder="Numero de operarios"
       name="numero_ops"
-      class="form-control" 
+      class="form-control noscroll" 
       id="numero_ops"      
       formControlName="numero_ops">
       <button type="button" (click)="setOperariosTemporada(1)" class="btn btn-primary">TEMPORADA BAJA</button>
@@ -202,7 +202,7 @@
         type="number"
         placeholder="peso RSU"
         name="rsu_manual"
-        class="form-control"  
+        class="form-control noscroll"  
         id="rsu_manual"        
         formControlName="rsu_manual">
     </div>
@@ -214,7 +214,7 @@
         type="number"
         placeholder="peso RSU cribadora"
         name="rsu_criba"
-        class="form-control" 
+        class="form-control noscroll" 
         id="rsu_criba"        
         formControlName="rsu_criba">
     </div>
@@ -226,7 +226,7 @@
         type="number"
         placeholder="peso SELECTIVO"
         name="selectivo"
-        class="form-control" 
+        class="form-control noscroll" 
         id="selectivo"        
         formControlName="selectivo">
     </div>
@@ -238,7 +238,7 @@
         type="number"
         placeholder="peso ALGAS PESADAS"
         name="algas_pesadas"
-        class="form-control" 
+        class="form-control noscroll" 
         id="algas_pesadas"        
         formControlName="algas_pesadas">
     </div>
@@ -250,7 +250,7 @@
         type="number"
         placeholder="peso ALGAS TEORICAS"
         name="algas_teoricas"
-        class="form-control" 
+        class="form-control noscroll" 
         id="algas_teoricas"        
         formControlName="algas_teoricas">
       </div>
@@ -267,7 +267,7 @@
         type="time"
         placeholder="hora SALIDA ALMACEN"
         name="salida_almacen"
-        class="form-control" 
+        class="form-control noscroll" 
         id="salida_almacen"        
         formControlName="salida_almacen">
     </div>
@@ -279,7 +279,7 @@
         type="time"
         placeholder="hora SALIDA PLAYA"
         name="salida_playa"
-        class="form-control" 
+        class="form-control noscroll" 
         id="salida_playa"        
         formControlName="salida_playa">
     </div>
@@ -291,7 +291,7 @@
         type="time"
         placeholder="hora LLEGADA ALMACEN"
         name="llegada_almacen"
-        class="form-control" 
+        class="form-control noscroll" 
         id="llegada_almacen"        
         formControlName="llegada_almacen">
     </div>
@@ -304,7 +304,7 @@
       type="number"
       placeholder="Bolsas de basura utilizadas"
       name="bolsas"
-      class="form-control" 
+      class="form-control noscroll" 
       id="bolsas"      
       formControlName="bolsas"> 
   </div>
