--- a/src/app/analisis/analisis/analisis.component.html
+++ b/src/app/analisis/analisis/analisis.component.html
@@ -4,7 +4,7 @@
   </p>
   <div class="form-group col-md-3">
     <label for="fechad">Fecha inicial</label>
-    <input #fechad="ngModel" [(ngModel)]="fechade" type="date" required class="form-control" id="fechad">
+    <input #fechad="ngModel" [(ngModel)]="fechade" type="date" required class="form-control noscroll" id="fechad">
     <div *ngIf="fechad.invalid && fechad.touched" class="card warning">
       <div class="section">
         <p>Fecha inicial necesaria</p>
@@ -13,7 +13,7 @@
   </div>
   <div class="form-group col-md-3">
     <label for="fechaha">Fecha final</label>
-    <input #fechah="ngModel" [(ngModel)]="fechaha" type="date" required class="form-control" id="fechaha"> 
+    <input #fechah="ngModel" [(ngModel)]="fechaha" type="date" required class="form-control noscroll" id="fechaha"> 
     <div *ngIf="fechah.invalid && fechah.touched" class="card warning">
       <div class="section">
         <p>Fecha final necesaria</p>
