--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -7,7 +7,7 @@
         </p>
         <div class="form-group col-md-3">
           <label for="fecha">Fecha</label>
-          <input id="fecha" type="date" name="fecha" placeholder="dia resumen" [(ngModel)]="fecha" class="form-control">         
+          <input id="fecha" type="date" name="fecha" placeholder="dia resumen" [(ngModel)]="fecha" class="form-control noscroll">         
         </div>
         <div class="form-group">
           <label for="municipio">Municipio</label>
