--- a/src/app/informes-lim/resumen-dia/resumen-dia.component.html
+++ b/src/app/informes-lim/resumen-dia/resumen-dia.component.html
@@ -89,7 +89,9 @@
     <div class="card">
       <div class="card-body">
         <p class="card-text">
-            LIMPIEZA, MANTENIMIENTO Y DESINFECCIÓN DE MURETES.
+            <span class="like-pre">
+              {{ textos['texto_1'] }}
+            </span>
         </p>         
       </div>
     </div>
@@ -98,7 +100,9 @@
     <div class="card">
       <div class="card-body">
         <p class="card-text">
-            MANTENIMIENTO DE: LAVAPIÉS, PASARELAS, JUEGOS INFANTILES, INSTALACIONES DEPORTIVAS
+            <span class="like-pre">
+              {{ textos['texto_2'] }}
+            </span>
         </p>         
       </div>
     </div>
